# rust-web-dev

./: Cargo.toml
migrations/2020-03-01-193603_create_products/: up.sql
migrations/2020-03-14-171316_create_products/: up.sql
migrations/2020-03-15-110212_create_users/: up.sql
src/: db_connection.rs  errors.rs  main.rs  schema.rs
src/handlers/: authentication.rs  mod.rs  products.rs  register.rs
src/models/: product.rs  user.rs
src/utils/: jwt.rs
