[package]
name = "web-learn"
version = "0.1.0"
authors = ["Roux Rémy <roux.remy.m@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0"
actix-rt = "1.0"
listenfd = "0.3"
diesel = { version = "1.4.3", features = ["postgres"] }
dotenv = "0.15.0"
serde_json = "1.0.48"
serde = "1.0.104"
serde_derive = "1.0.104"
futures = "0.3.4"